--- a/02-05/workingfolder/ajax/index.html
+++ b/02-05/workingfolder/ajax/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>AJAX page</h1>
+<button id="loadbutton">Click to Load JSON</button>
 <div id="update"></div>
 <script src="script.js"></script>
 </body>
