jQuery getJSON AJAX Request

--- a/03-03/workingfolder/ajax/index.html
+++ b/03-03/workingfolder/ajax/index.html
@@ -5,6 +5,7 @@
 	<title>JavaScript AJAX</title>
 </head>
 <body>
+<h1>Speakers</h1>
 <div id="update"></div>
 <script src="jquery.js"></script>
 <script src="script.js"></script>
