--- a/04-01/workingfolder/ajax/index.html
+++ b/04-01/workingfolder/ajax/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8" />
 	<title>Live Search</title>
+    <!-- STYLESHEETS -->
+    <link rel="stylesheet" href="mystyle.css" />
 </head>
+
+
 <body>
+
+
+<!-- SEARCH BOX -->
+<div id="searcharea">
+    <label for="searchBox">Search</label>
+    <p>Search a name or bio of a speaker</p>
+    <input type="search" name="search" id="searchBox" placeholder="name or info" />
+</div>
+
+</br></br>
+
+<!-- DYNAMICALLY UPDATED VIA jQuery WITH AJAX RESULTS -->
 <div id="update"></div>
+
+
+<!-- SCRIPTS -->
 <script src="jquery.js"></script>
 <script src="script.js"></script>
+
+
 </body>
 </html>
