--- a/04-01/workingfolder/ajax/index.html
+++ b/04-01/workingfolder/ajax/index.html
@@ -13,11 +13,11 @@
 <!-- SEARCH BOX -->
 <div id="searcharea">
     <label for="searchBox">Search</label>
-    <p>Search a name or bio of a speaker</p>
-    <input type="search" name="search" id="searchBox" placeholder="name or info" />
+    <p>Search a Name or Bio of a speaker</p>
+    <input type="search" name="search" id="searchBox" placeholder="Search Name or Bio" />
 </div>
 
-</br></br>
+</br>
 
 <!-- DYNAMICALLY UPDATED VIA jQuery WITH AJAX RESULTS -->
 <div id="update"></div>
